--- a/src/partials/gobierno/4_informes.html
+++ b/src/partials/gobierno/4_informes.html
@@ -9,10 +9,10 @@
       <div class="as_documentos_grd_item">
         <h3>Informes financieros</h3>
         <div class="as__desc">
-          <h3>
+        <!--  <h3>
             <i class="fa-solid fa-file"></i>
             Descargables
-          </h3>
+          </h3>-->
           <ul class="as__desc_items full">
             <li class="as__desc_item">
               <a
@@ -22,7 +22,7 @@
                 <div>
                   <b
                     >Estados Financieros y revelaciones diciembre 2023
-                    Asulado.pdf</b
+                    Asulado</b
                   >
                   <span> PDF 1.9 mb </span>
                 </div>
@@ -35,10 +35,7 @@
       <div class="as_documentos_grd_item">
         <h3>Informes de gestión</h3>
         <div class="as__desc">
-          <h3>
-            <i class="fa-solid fa-file"></i>
-            Descargables
-          </h3>
+         
           <ul class="as__desc_items full">
             <li class="as__desc_item">
               <a
@@ -64,10 +61,7 @@
       <div class="as_documentos_grd_item">
         <h3>Informes financieros</h3>
         <div class="as__desc">
-          <h3>
-            <i class="fa-solid fa-file"></i>
-            Descargables
-          </h3>
+         
           <ul class="as__desc_items full">
             <li class="as__desc_item">
               <a
@@ -90,10 +84,7 @@
       <div class="as_documentos_grd_item">
         <h3>Informes de gestión</h3>
         <div class="as__desc">
-          <h3>
-            <i class="fa-solid fa-file"></i>
-            Descargables
-          </h3>
+        
           <ul class="as__desc_items full">
             <li class="as__desc_item">
               <a
