--- a/src/partials/gobierno/4_informes.html
+++ b/src/partials/gobierno/4_informes.html
@@ -7,7 +7,27 @@
     <div class="collapse-title">2023</div>
     <div class="as_documentos_grd collapse-content">
       <div class="as_documentos_grd_item">
-        <h3>Informes financieros</h3>
+        <h3>Informes de gestión</h3>
+        <div class="as__desc">
+         
+          <ul class="as__desc_items full">
+            <li class="as__desc_item">
+              <a
+                href="/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf"
+                target="_blank"
+              >
+                <div>
+                  <b>Informe de gestión ASULADO 2023</b>
+                  <span> PDF 12.9 mb </span>
+                </div>
+                <i class="itc fa-light fa-cloud-arrow-down"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="as_documentos_grd_item">
+        <h3>Estados financieros</h3>
         <div class="as__desc">
         <!--  <h3>
             <i class="fa-solid fa-file"></i>
@@ -32,26 +52,7 @@
           </ul>
         </div>
       </div>
-      <div class="as_documentos_grd_item">
-        <h3>Informes de gestión</h3>
-        <div class="as__desc">
-         
-          <ul class="as__desc_items full">
-            <li class="as__desc_item">
-              <a
-                href="/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf"
-                target="_blank"
-              >
-                <div>
-                  <b>Informe de gestión ASULADO 2023</b>
-                  <span> PDF 12.9 mb </span>
-                </div>
-                <i class="itc fa-light fa-cloud-arrow-down"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+     
     </div>
   </div>
   <div class="collapse">
@@ -59,7 +60,27 @@
     <div class="collapse-title">2022</div>
     <div class="as_documentos_grd collapse-content">
       <div class="as_documentos_grd_item">
-        <h3>Informes financieros</h3>
+        <h3>Informes de gestión</h3>
+        <div class="as__desc">
+        
+          <ul class="as__desc_items full">
+            <li class="as__desc_item">
+              <a
+                href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
+                target="_blank"
+              >
+                <div>
+                  <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
+                  <span> PDF 192 kb </span>
+                </div>
+                <i class="itc fa-light fa-cloud-arrow-down"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="as_documentos_grd_item">
+        <h3>Estados financieros</h3>
         <div class="as__desc">
          
           <ul class="as__desc_items full">
@@ -81,26 +102,7 @@
           </ul>
         </div>
       </div>
-      <div class="as_documentos_grd_item">
-        <h3>Informes de gestión</h3>
-        <div class="as__desc">
-        
-          <ul class="as__desc_items full">
-            <li class="as__desc_item">
-              <a
-                href="/assets/documentos/Presidente y Junta Directiva Informe.pdf"
-                target="_blank"
-              >
-                <div>
-                  <b>Informe de gestión de Presidenta y Junta Directiva 2022</b>
-                  <span> PDF 192 kb </span>
-                </div>
-                <i class="itc fa-light fa-cloud-arrow-down"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      
     </div>
   </div>
 
