--- a/src/partials/PORTAL/p_ayuda.html
+++ b/src/partials/PORTAL/p_ayuda.html
@@ -11,6 +11,12 @@
         </li> -->
         <li>
           <i class="ayu-ico fa-regular fa-message"></i>
+          <img
+            alt="Habla con nosotros"
+            loading="lazy"
+            src="/assets/images/PORTAL/b1.png"
+          />
+
           <p>Habla con nosotros</p>
           <a
             href="https://api.whatsapp.com/send?phone=573155114150"
@@ -21,6 +27,11 @@
         </li>
         <li>
           <i class="ayu-ico fa-regular fa-phone"></i>
+          <img
+            alt="Llama a nuestras líneas"
+            loading="lazy"
+            src="/assets/images/PORTAL/b2.png"
+          />
           <p>Llama a nuestras líneas</p>
           <div>
             <a href="tel:01 8000 412 854" target="_blank"
@@ -33,6 +44,11 @@
         </li>
         <li>
           <i class="ayu-ico fa-regular fa-heart"></i>
+          <img
+            alt="¡Síguenos"
+            loading="lazy"
+            src="/assets/images/PORTAL/b3.png"
+          />
           <p>¡Síguenos!</p>
           <div class="hri">
             <a
