--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -68,34 +68,56 @@
             >Novedades</a
           >
           <ul tabindex="0" class="dropdown-content">
-            <li>
-              <a href="/PORTAL/4_novedades_1.html"
-                >Redistribuciones de mesada</a
-              >
+            <li class="dropdown-group">
+              <h2 class="menu-title">Deducción de nomina</h2>
+              <ul>
+                <li>
+                  <a href="/PORTAL/4_novedades_1.html"
+                    >Redistribuciones de mesada</a
+                  >
+                </li>
+                <li>
+                  <a href="/PORTAL/4_novedades_1.html">Novedades de EPS</a>
+                </li>
+                <li>
+                  <a href="/PORTAL/4_novedades_1.html"
+                    >Novedades de Caja de Compensación</a
+                  >
+                </li>
+                <li>
+                  <a href="/PORTAL/4_novedades_1.html"
+                    >Novedades Pensión Voluntaria</a
+                  >
+                </li>
+              </ul>
             </li>
-            <li>
-              <a href="/PORTAL/4_novedades_1.html">Certificado de estudio</a>
+            <li class="dropdown-group">
+              <h2 class="menu-title">Certificación nomina</h2>
+              <ul>
+                <li>
+                  <a href="/PORTAL/4_novedades_1.html"
+                    >Certificado de estudio</a
+                  >
+                </li>
+                <li>
+                  <a href="/PORTAL/4_novedades_1.html"
+                    >Certificado de supervivencia</a
+                  >
+                </li>
+                <li>
+                  <a href="/PORTAL/4_novedades_1.html"
+                    >Novedades de cuenta financiera</a
+                  >
+                </li>
+              </ul>
             </li>
-            <li>
-              <a href="/PORTAL/4_novedades_1.html"
-                >Certificado de supervivencia</a
-              >
-            </li>
-            <li><a href="/PORTAL/4_novedades_1.html">Novedades de EPS</a></li>
-            <li>
-              <a href="/PORTAL/4_novedades_1.html"
-                >Novedades de Caja de Compensación</a
-              >
-            </li>
-            <li>
-              <a href="/PORTAL/4_novedades_1.html"
-                >Novedades de cuenta financiera</a
-              >
-            </li>
-            <li>
-              <a href="/PORTAL/4_novedades_1.html"
-                >Novedades Pensión Voluntaria</a
-              >
+            <li class="dropdown-group">
+              <h2 class="menu-title">Consultas</h2>
+              <ul>
+                <li>
+                  <a href="/PORTAL/4_novedades_3_1.html">Consulta novedades</a>
+                </li>
+              </ul>
             </li>
           </ul>
         </li>
