Update links and filenames in PORTAL pages

--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -72,20 +72,20 @@
               <h2 class="menu-title">Deducción de nomina</h2>
               <ul>
                 <li>
-                  <a href="/PORTAL/4_novedades_1.html"
+                  <a href="/PORTAL/4_novedades_1_1.html"
                     >Redistribuciones de mesada</a
                   >
                 </li>
                 <li>
-                  <a href="/PORTAL/4_novedades_1.html">Novedades de EPS</a>
+                  <a href="/PORTAL/4_novedades_1_2.html">Novedades de EPS</a>
                 </li>
                 <li>
-                  <a href="/PORTAL/4_novedades_1.html"
+                  <a href="/PORTAL/4_novedades_1_3.html"
                     >Novedades de Caja de Compensación</a
                   >
                 </li>
                 <li>
-                  <a href="/PORTAL/4_novedades_1.html"
+                  <a href="/PORTAL/4_novedades_1_4.html"
                     >Novedades Pensión Voluntaria</a
                   >
                 </li>
@@ -95,17 +95,17 @@
               <h2 class="menu-title">Certificación nomina</h2>
               <ul>
                 <li>
-                  <a href="/PORTAL/4_novedades_1.html"
+                  <a href="/PORTAL/4_novedades_2_1.html"
                     >Certificado de estudio</a
                   >
                 </li>
                 <li>
-                  <a href="/PORTAL/4_novedades_1.html"
+                  <a href="/PORTAL/4_novedades_2_2.html"
                     >Certificado de supervivencia</a
                   >
                 </li>
                 <li>
-                  <a href="/PORTAL/4_novedades_1.html"
+                  <a href="/PORTAL/4_novedades_2_3.html"
                     >Novedades de cuenta financiera</a
                   >
                 </li>
