--- a/src/partials/gobierno/3_organos.html
+++ b/src/partials/gobierno/3_organos.html
@@ -9,12 +9,12 @@
   >
     <img
       class="max-w-[227px]"
-      src="/assets/images/chart_accionistas.png"
+      src="/assets/images/chart_2024.png"
       alt="Accionistas"
     />
     <img
       class="max-w-[250px]"
-      src="/assets/images/accionistas2.png"
+      src="/assets/images/accionistas_2024.png"
       alt="Accionistas"
     />
   </div>
@@ -399,7 +399,7 @@
   <h2 class="mt-8">Comités de Junta Directiva</h2>
   <ul class="g-m-mie">
     <li class="g-m-mie-li">
-      <h4>Comité de Riesgos e Inversiones</h4>
+      <h4>Comité de Riesgos</h4>
       <ul>
         <li>Sebastián Alberto Rey</li>
         <li>Nicolás Grassi</li>
@@ -418,7 +418,7 @@
       <h4>Comité de Nombramientos y Compensación</h4>
       <ul>
         <li>Catalina Restrepo Cardona</li>
-        <li>Tatiana Uribe Aristizábal</li>
+        <li>Stella Villegas de Osorio*</li>
         <li>Andrés Aguirre Martínez*</li>
       </ul>
     </li>
