--- a/src/partials/gobierno/4_informes.html
+++ b/src/partials/gobierno/4_informes.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="as_documentos_grd_item">
-        <h3>Estados financieros</h3>
+        <h3>Estadosa financieros</h3>
         <div class="as__desc">
          
           <ul class="as__desc_items full">
