--- a/src/partials/gobierno/3_organos.html
+++ b/src/partials/gobierno/3_organos.html
@@ -21,7 +21,7 @@
 
   <ul class="gob-list gaccionistas">
     <li>
-      <span class="gper">78 %</span>
+      <span class="gper" style="width: 6rem;">78.47 %</span>
       <img src="/assets/images/logo_sura.png" alt="Sura Asset Managament" />
       <p>
         SURA Asset Management es la mayor gestora de activos financieros no
@@ -32,7 +32,7 @@
       </p>
     </li>
     <li>
-      <span class="gper">14.5 %</span>
+      <span class="gper"  style="width: 6rem;">14.46 %</span>
       <img src="/assets/images/logo_col.png" alt="Colsubsidio" />
       <p>
         Colsubsidio es una corporación sin ánimo de lucro, cuya gestión la
@@ -42,7 +42,7 @@
       </p>
     </li>
     <li>
-      <span class="gper">6.6 %</span>
+      <span class="gper">6.64 %</span>
       <img src="/assets/images/logo_corner.png" alt="Cornerstone" />
       <p>
         Cornerstone LP es un vehículo creado por Alberta Investment Management
@@ -52,7 +52,7 @@
       </p>
     </li>
     <li class="frw">
-      <span class="gper">0.9 %</span>
+      <span class="gper">0.43 %</span>
       <h4 class="gpert">Otros</h4>
     </li>
   </ul>
