Update images and CSS styles

--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1200,6 +1200,9 @@ body {
   }
   ul.items {
     @apply bg-alpha-10 rounded-xl px-6 py-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  md:divide-x divide-solid divide-alpha-30 gap-4 border border-alpha-15;
+    &.g2 {
+      @apply grid-cols-1 md:grid-cols-2 lg:grid-cols-2;
+    }
     li {
       @apply flex-1 md:px-3 py-2 flex flex-col gap-1.5 transition-colors ease-in-out hover:bg-alpha-20 rounded-lg;
       h4 {
