--- a/src/partials/PORTAL/1_pqrs/1_crear_1.html
+++ b/src/partials/PORTAL/1_pqrs/1_crear_1.html
@@ -316,7 +316,15 @@
                     </tr>
                     <tr>
                       <td class="data2Col" colspan="2">
-                        <div class="form-control fc-full"></div>
+                        <p>
+                          Podrás elegir si deseas recibir tu respuesta por
+                          correo electrónico, teléfono o carta física. Si
+                          necesitas subir algún documento, sigue las
+                          consideraciones para subir archivos a continuación.
+                          Recuerda aceptar los términos y condiciones e indicar
+                          que no eres un robot para diligenciar con éxito tu
+                          solicitud.
+                        </p>
                       </td>
                     </tr>
                     <tr>
