--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -928,9 +928,9 @@ body {
         @apply w-auto mx-auto text-4xl font-je text-azul-bold text-center flex py-1.5 px-5 rounded-full bg-white;
       }
       ul.pa__ayuda_items {
-        @apply mx-auto lg:max-w-4xl w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-8 2xl:w-10/12 items-start justify-between;
+        @apply mx-auto lg:max-w-4xl w-full flex flex-nowrap flex-col lg:grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-8 2xl:w-10/12 items-start justify-center lg:justify-between;
         li {
-          @apply lg:w-auto w-full flex flex-col items-center justify-center gap-3;
+          @apply flex-1 lg:w-auto w-full flex flex-col items-center justify-center gap-3;
           i.ayu-ico {
             @apply hidden h-20 w-20 2xl:h-28 2xl:w-28 items-center justify-center rounded-full border-azul-bold border md:border-2 bg-gradient-radial from-amarillo-10 to-amarillo-light text-3xl 2xl:text-5xl text-azul-bold shadow-lg shadow-alpha-30;
           }
