Update heading tags in PORTAL pages

--- a/src/partials/PORTAL/p_footer.html
+++ b/src/partials/PORTAL/p_footer.html
@@ -186,17 +186,20 @@
         alt="Tratamiento de datos"
       />
       <h3>
-        Recuerda aceptar nuestra política de tratamiento de datos antes de
-        ingresar al portal
+        Para ingresar, es importante aceptar nuestra política de tratamiento de
+        datos personales
       </h3>
       <p>
         Esto nos permite crear un entorno seguro, confiable y transparente para
         ti
       </p>
-      <!-- <a href="/suscribete" class="as__button">
-        <span>Quiero registrarme</span>
-        <i role="presentation" class="fa-light fa-arrow-right"></i>
-      </a> -->
+      <div class="modal_btns">
+        <button class="btn_modal btn_no">Ahora no</button>
+        <button class="btn_modal btn_si">
+          Acepto el tratamiento de datos personales
+        </button>
+      </div>
+
       <label class="modal_check" for="showcheck">
         <span> Acepto el tratamiento de datos </span>
         <input
@@ -207,7 +210,7 @@
         />
       </label>
       <p class="read">
-        Si quieres leer nuevamente nuestra política de tratamiento de datos,
+        Para leer nuestra política de tratamiento de datos
         <a
           href="/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf"
           target="_blank"
