--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1198,15 +1198,15 @@ body {
 .pa_co_header {
   @apply flex flex-col gap-4;
   h3 {
-    @apply text-azul-bold text-2xl font-je;
-  }
-  h4 {
-    @apply text-azul-bold text-xl font-je flex gap-3;
+    @apply text-azul-bold text-2xl font-je flex gap-3;
     &::before {
       content: "\f061";
       font-family: "Font Awesome 5 Pro";
       @apply text-azul-bright2;
     }
+  }
+  h4 {
+    @apply text-azul-bold text-xl font-je flex gap-3;
   }
   ul.items {
     @apply bg-alpha-10 rounded-xl px-6 py-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  md:divide-x divide-solid divide-alpha-30 gap-4 border border-alpha-15;
@@ -1527,7 +1527,19 @@ body {
         }
       }
       .modal_check {
-        @apply py-2 mt-2 border rounded-lg border-azul-20 text-azul-dark flex gap-x-4 items-center justify-center bg-alpha-30 hover:bg-azul-40 transition-colors ease-in-out cursor-pointer;
+        @apply hidden py-2 mt-2 border rounded-lg border-azul-20 text-azul-dark gap-x-4 items-center justify-center bg-alpha-30 hover:bg-azul-40 transition-colors ease-in-out cursor-pointer;
+      }
+      .modal_btns {
+        @apply flex gap-2;
+        button {
+          @apply btn btn-sm py-2 h-auto;
+        }
+        button.btn_si {
+          @apply flex-auto bg-green-100 border-green-600 text-green-900 hover:bg-green-300;
+        }
+        button.btn_no {
+          @apply flex-auto bg-red-100 text-red-900 border-red-600 hover:bg-red-300 w-1/3;
+        }
       }
       p.read {
         @apply text-sm text-azul-norm;
