--- a/src/partials/PORTAL/2_certificados/4_certificados_ingreso.html
+++ b/src/partials/PORTAL/2_certificados/4_certificados_ingreso.html
@@ -1,3 +1,8 @@
+<div class="pa-loading">
+  <div class="loading"></div>
+  <p>Espera un momento mientras cargamos la información que solicitaste</p>
+</div>
+
 <form
   id="pg:fm"
   name="pg:fm"
@@ -502,7 +507,7 @@
               <tbody>
                 <tr>
                   <td class="data2Col first" colspan="2">
-                    <p>
+                    <p class="palert">
                       Se ha enviado satisfactoriamente el certificado de
                       ingresos y retenciones a tu correo registrado
                     </p>
