--- a/src/partials/home/cifras.html
+++ b/src/partials/home/cifras.html
@@ -13,7 +13,7 @@
         <div class="as__cifras_content_cifra">
           <img src="/assets/images/ILUS2.webp" alt="asulado" />
           <h4>
-            <span id="home_cifras_cobertura" class="s"></span
+            <span id="home_cifras_cobertura" class="l"></span
             ><small>millones</small>
           </h4>
           <p>de cobertura de afiliados a través del Seguro Previsional</p>
