--- a/src/css/app.css
+++ b/src/css/app.css
@@ -724,11 +724,11 @@ body {
     @apply text-primary;
   }
   .as__cifras_content {
-    @apply flex flex-col items-center justify-between pt-8 md:flex-row md:gap-x-8 md:pt-16 lg:gap-x-32;
+    @apply flex flex-col md:grid md:grid-cols-3 items-center justify-between pt-8   md:pt-16;
     .as__cifras_content_cifra {
-      @apply w-full md:w-1/3;
+      @apply w-full;
       img {
-        @apply mx-auto w-3/5 md:w-full 2xl:w-[80%];
+        @apply mx-auto md:w-full lg:w-[280px];
       }
       h4 {
         @apply flex justify-center gap-x-2 items-end font-je -mt-4 mb-0 ml-6 text-7xl font-bold leading-[0.8em] text-amarillo-mid md:mr-4 md:text-8xl;
@@ -2586,7 +2586,6 @@ body {
       }
     }
   }
-  
 }
 .as__desc {
   @apply p-8 rounded-xl bg-white flex flex-col gap-y-4;
@@ -2625,7 +2624,7 @@ body {
 }
 
 .as_documentos_grd {
-  @apply flex flex-col gap-8 md:!flex-row justify-between items-start ;
+  @apply flex flex-col gap-8 md:!flex-row justify-between items-start;
   .as_documentos_grd_item {
     @apply w-full md:w-1/2 flex flex-col gap-4;
   }
